--- a/server/package.json
+++ b/server/package.json
@@ -10,7 +10,9 @@
     "dev": "nodemon index.js"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
+    "express": "^4.18.2",
     "node-telegram-bot-api": "^0.64.0"
   }
 }
